cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "tkcachebuilder"
publish = false
version = "0.1.0"

[[bin]]
filename = "TKCacheBuilder"
name = "tkcachebuilder"

[profile.release]
lto = true
strip = true

[dependencies]
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
ron = { version = "0.8.0" }
tungstenkit = { path = "../../Libraries/TungstenKit" }
